# elasticsearch-news

./: README.md  pyproject.toml
src/elasticsearch_news/: __init__.py
