[project]
name = "elasticsearch-news"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ac2393921", email = "ac2393921@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/elasticsearch_news"]
